--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,14 +2,16 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 body {
+  margin: 0 auto;
   width: 100vh;
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background: linear-gradient(45deg, #dbcadb, #008080);
+  background: linear-gradient(45deg, #aca1ac, #008080);
 }
 
 .wrapper {
@@ -20,21 +22,24 @@ body {
 }
 
 h1 {
-  /* width: 33%; */
+  /* margin: 0 auto; */
   padding: 30px;
   margin-bottom: 10px;
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: #433e43;
 }
 
 button{
+  color: #6e696e;
   width: 20%;
-  height: 40px;
+  height: 60px;
   padding: 16px;
   padding-top: 10px;
-
+  /* margin: 0 auto;
+  transform: rotate(90deg); */
 }
 
 #numbers, #secondset, #thirdset {
