adding functionality to my rotator

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,10 +6,11 @@
 }
 
 body {
-  margin: 0 auto;
+  /* margin: 0 auto; */
   width: 100vh;
   height: 100vh;
   display: flex;
+  align-items: center;
   flex-direction: column;
   background: linear-gradient(45deg, #aca1ac, #008080);
 }
@@ -18,13 +19,10 @@ body {
   width: 80%;
   display: grid;
   grid-template-columns: 3 3;
-  margin: 0 auto;
 }
 
 h1 {
-  /* margin: 0 auto; */
   padding: 30px;
-  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -38,14 +36,11 @@ button{
   height: 60px;
   padding: 16px;
   padding-top: 10px;
-  /* margin: 0 auto;
-  transform: rotate(90deg); */
 }
 
 #numbers, #secondset, #thirdset {
   padding: 8px;
   display: flex;
-  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
 }
