adding functionality to my rotator

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -38,7 +38,9 @@ button {
   padding-top: 10px;
 }
 
-#numbers, #secondset, #thirdset {
+#numbers,
+#secondset,
+#thirdset {
   padding: 8px;
   display: flex;
   align-items: center;
